DBZ-5893 Fix ReducedRecord Buffer implementation in case of RECORD_VALUE mode